Bug 1312594: Do not clear resource when error occurs. r=jwwang

MozReview-Commit-ID: EFrURgSYvdb