dom/html/HTMLMediaElement.cpp
@@ -4396,9 +4396,6 @@ void HTMLMediaElement::DecodeError(const MediaResult& aError)
   if (mDecoder) {
     ShutdownDecoder();
   }
-  RemoveMediaElementFromURITable();
-  mLoadingSrc = nullptr;
-  mMediaSource = nullptr;
   AudioTracks()->EmptyTracks();
   VideoTracks()->EmptyTracks();
   if (mIsLoadingFromSourceChildren) {
